--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -33,3 +33,83 @@
   text-align: center;
   margin-top: 10px;
 }
+/* End off  CSS for single-games.php */
+
+/* creating CSS for game host application form  */
+
+.question-item {
+  padding: 1.25rem 1.25rem;
+  position: relative;
+}
+.question-order {
+  margin: 5px;
+  padding: 1px;
+  line-height: 1.25rem;
+}
+
+.form-control {
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border: 1px solid;
+  background: white;
+  color: darkgray;
+  border-radius: 0.25rem;
+  min-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  width: 90%;
+  border-width: 0px 0px 0.125rem;
+  border-top-style: initial;
+  border-top-color: initial;
+  border-left-style: initial;
+  border-left-color: initial;
+  border-right-style: initial;
+  border-right-color: initial;
+  border-bottom-style: solid;
+  border-bottom-color: transparent;
+  outline: none;
+  padding: 0.375rem 0.75rem;
+  resize: none;
+  user-select: text;
+}
+.radio-button {
+  margin: 0px;
+  padding: 0px;
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: #75592d;
+  stroke: #75592d;
+}
+.req-field {
+  color: #c12f32;
+}
+.gamehost-application-container {
+  background-color: #f0eae1;
+  margin: 10px;
+  padding: 2px;
+}
+.Submit-button {
+  display: inline-flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  border: 0px;
+  vertical-align: middle;
+  margin: 20px;
+  cursor: pointer;
+  text-decoration-line: none;
+  outline-style: none;
+  width: fit-content;
+  color: white;
+  background: #75592d;
+  border-radius: 0.25rem;
+  padding: 0.625rem 1.25rem;
+  min-width: 6rem;
+  min-height: 2.5rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+  font-size: 0.875rem;
+}
+
+/* End of CSS for game host application form */
