--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -33,6 +33,19 @@
   text-align: center;
   margin-top: 10px;
 }
+/* For lokis game answer */
+.lokis-loop-incorrect {
+  color: #842029;
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
+  border-radius: 7px;
+}
+.lokis-loop-correct {
+  color: #0f5132;
+  background-color: #d1e7dd;
+  border-color: #badbcc;
+  border-radius: 7px;
+}
 /* End off  CSS for single-games.php */
 
 /* creating CSS for game host application form  */
