--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -32,19 +32,28 @@
   margin: auto;
   text-align: center;
   margin-top: 10px;
+  width: 300px;
 }
 /* For lokis game answer */
 .lokis-loop-incorrect {
   color: #842029;
   background-color: #f8d7da;
   border-color: #f5c2c7;
-  border-radius: 7px;
+  border-radius: 5px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .lokis-loop-correct {
   color: #0f5132;
   background-color: #d1e7dd;
   border-color: #badbcc;
-  border-radius: 7px;
+  border-radius: 5px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* End off  CSS for single-games.php */
 
