--- a/lokis-admin/assets/css/lokis-admin-style.css
+++ b/lokis-admin/assets/css/lokis-admin-style.css
@@ -1,39 +1,38 @@
 /* CSS for lokis-games-settings.php */
 
-.lokis-game-wrap {
-  margin: 100px;
-  height: 50vh;
-  display: grid !important;
-  justify-content: center;
-  align-items: center;
-}
-.lokis-game-wrap h1 {
-  display: flex;
-  align-items: center;
+#wpbody-content {
+  background-color: white;
+  width: 90%;
+  padding: 20px 10px;
 }
 .lokis-game-setting {
-  display: contents;
-}
-fieldset {
-  display: grid;
-  border: 1px solid;
-  margin: 10px;
   padding: 10px;
 }
-legend {
+.lokis-game-wrap h1 {
+  text-align: center;
+  color: #252627;
+}
+.lokis-inputpage {
+  padding: 5px;
+  font-size: 1rem;
+  margin-top: 10px;
+}
+.lokis-game-wrap select {
+  width: 100%;
+  max-width: 100%;
+  background-color: #e8eeef;
+  border-color: #e8eeef;
   padding: 10px;
+  font-size: 1rem;
 }
-.register-page {
-  margin-top: 20px;
-}
-.submit {
-  position: relative;
-}
-#loki-submit {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.lokis-game-wrap #loki-submit {
+  width: 100%;
+  max-width: 100%;
+  background-color: #4dc972;
+  color: white;
+  border-color: #4dc972;
+  padding: 8px;
+  font-size: 1rem;
 }
 /* End off  CSS for lokis-games-settings.php */
