--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -32,7 +32,22 @@
   margin: auto;
   text-align: center;
   margin-top: 10px;
-  width: 300px;
+  width: 287px;
+  align-items: center;
+}
+.lokisloop-answer {
+  display: flex;
+  align-items: center;
+}
+.lokisloop-answer label {
+  margin-right: 5px;
+}
+.lokis-post-form form input#lokis-answer {
+  cursor: pointer;
+  padding: 0.625rem 1.25rem;
+  font-weight: 600;
+  font-size: 0.875rem;
+  border: 1px solid;
 }
 /* For lokis game answer */
 .lokis-loop-incorrect {
@@ -45,6 +60,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5px;
 }
 .lokis-loop-correct {
   color: #0f5132;
@@ -55,6 +71,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5px;
+}
+.lokis-submit-btn {
+  cursor: pointer;
+  padding: 0.625rem 1.25rem;
+  font-weight: 600;
+  font-size: 0.875rem;
+  margin-left: 5px;
 }
 /* End off  CSS for single-games.php */
 
@@ -129,3 +153,78 @@
 }
 
 /* End of CSS for game host application form */
+
+/* Creating CSS for User Dashboard  */
+.sidebar.active ~ .home-section nav {
+  left: 60px;
+  width: calc(100% - 60px);
+}
+.home-section nav .sidebar-button {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+nav .sidebar-button i {
+  font-size: 35px;
+  margin-right: 10px;
+}
+.home-section nav .search-box {
+  position: relative;
+  height: 50px;
+  max-width: 550px;
+  width: 100%;
+  margin: 0 20px;
+}
+nav .search-box input {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  background: #f5f6fa;
+  border: 2px solid #efeef1;
+  border-radius: 6px;
+  font-size: 18px;
+  padding: 0 15px;
+}
+nav .search-box .bx-search {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background: #2697ff;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 4px;
+  line-height: 40px;
+  text-align: center;
+  color: #fff;
+  font-size: 22px;
+  transition: all 0.4 ease;
+}
+.home-section nav .profile-details {
+  display: flex;
+  align-items: center;
+  background: #f5f6fa;
+  border: 2px solid #efeef1;
+  border-radius: 6px;
+  height: 50px;
+  min-width: 190px;
+  padding: 0 15px 0 2px;
+}
+nav .profile-details img {
+  height: 40px;
+  width: 40px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+nav .profile-details .admin_name {
+  font-size: 15px;
+  font-weight: 500;
+  color: #333;
+  margin: 0 10px;
+  white-space: nowrap;
+}
+nav .profile-details i {
+  font-size: 25px;
+  color: #333;
+}
