--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -182,6 +182,7 @@
 .lokisloop-dashboard-container .lokisloop-menu ul li .logout:hover {
   background-color: #eee;
 }
+/* CSS For Hosted Game */
 
 .lokisloop-hosted-game .lokisloop-container-wrapper {
   padding: 30px;
@@ -306,4 +307,78 @@
 .lokisloop-container-wrapper tbody tr td {
   text-align: left;
 }
+/* End of Hosted Game */
+
+/* CSS For user profile */
+
+.lokisloop-container {
+  background: #f9f9f9;
+  padding: 20px;
+  margin: 0 auto;
+  position: relative;
+  margin-left: 10px;
+  width: 800px;
+}
+
+.lokisloop-container .lokisloop-logo {
+  float: right;
+  margin-right: 12px;
+  margin-top: 12px;
+  font-weight: 900;
+  font-size: 1.5em;
+  letter-spacing: 1px;
+  color: #5a5a5a;
+}
+
+.lokisloop-container .lokisloop-profile .leftbox {
+  float: left;
+  top: 0%;
+  left: 1%;
+  position: absolute;
+  width: 15%;
+  height: 100%;
+  background: #d9d9d9;
+}
+
+.lokisloop-container .lokisloop-profile .rightbox {
+  float: right;
+  width: 60%;
+  height: 100%;
+}
+.lokisloop-container .rightbox .profile .update-button {
+  color: #5a5a5a;
+  background-color: #d9d9d9;
+  padding: 10px 40px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 6px;
+  border: 1px solid #d9d9d9;
+}
+
+.lokisloop-profile .container .rightbox .profile h1 {
+  color: #5a5a5a;
+  font-size: 1.5em;
+  margin-top: 40px;
+  margin-bottom: 35px;
+}
+
+.lokisloop-container h2 {
+  color: #5a5a5a;
+  width: 80%;
+  text-transform: uppercase;
+  font-size: 8px;
+  letter-spacing: 1px;
+  margin-left: 2px;
+}
+
+.lokisloop-container .rightbox .profile input {
+  border: 1px solid lighten(gray, 40%);
+  padding: 2px;
+  margin: 10px;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+}
+/* End of profile */
+
 /* Ended CSS for User Dashboard  */
