--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -6,7 +6,18 @@
 }
 
 /* creating CSS for single-games.php */
-
+@media only screen and (min-width: 822px) {
+  :root {
+    --responsive--aligndefault-width: min(
+      calc(100vw - 8 * var(--global--spacing-horizontal)),
+      610px
+    );
+    --responsive--alignwide-width: min(
+      calc(100vw - 8 * var(--global--spacing-horizontal)),
+      1240px
+    );
+  }
+}
 /* for lokis-paragraph-content */
 
 .lokisloop-container {
@@ -182,16 +193,13 @@
 .lokisloop-dashboard-container .lokisloop-menu ul li .logout:hover {
   background-color: #eee;
 }
-/* CSS For Hosted Game */
 
 .lokisloop-hosted-game .lokisloop-container-wrapper {
   padding: 30px;
 }
-.entry-content .lokisloop-dashboard-container {
-  margin-left: 10px !important;
-  margin-right: 10px !important;
-  max-width: 100% !important;
+.lokisloop-dashboard-container {
   display: flex;
+  max-width: var(--responsive--alignwide-width) !important;
 }
 .lokisloop-dashboard-container aside ul {
   padding-left: 0;
@@ -204,12 +212,10 @@
   font-size: 16px;
   border: 1px solid #ffffff;
   width: 25%;
-
   background-color: rgb(238, 238, 238);
-
   float: left;
 }
-
+/* CSS For Hosted Game */
 .lokisloop-dashboard-container .lokisloop-hosted-game {
   font-size: 16px;
   float: right;
@@ -317,7 +323,6 @@
   margin: 0 auto;
   position: relative;
   margin-left: 10px;
-  width: 800px;
 }
 
 .lokisloop-container .lokisloop-logo {
@@ -330,29 +335,8 @@
   color: #5a5a5a;
 }
 
-.lokisloop-container .lokisloop-profile .leftbox {
-  float: left;
-  top: 0%;
-  left: 1%;
-  position: absolute;
-  width: 15%;
-  height: 100%;
-  background: #d9d9d9;
-}
-
 .lokisloop-container .lokisloop-profile .rightbox {
-  float: right;
-  width: 60%;
   height: 100%;
-}
-.lokisloop-container .rightbox .profile .update-button {
-  color: #5a5a5a;
-  background-color: #d9d9d9;
-  padding: 10px 40px;
-  font-size: 14px;
-  cursor: pointer;
-  border-radius: 6px;
-  border: 1px solid #d9d9d9;
 }
 
 .lokisloop-profile .container .rightbox .profile h1 {
@@ -372,13 +356,74 @@
 }
 
 .lokisloop-container .rightbox .profile input {
-  border: 1px solid lighten(gray, 40%);
-  padding: 2px;
+  padding: 10px;
   margin: 10px;
   border-top: 0;
   border-left: 0;
   border-right: 0;
+  width: 72%;
 }
+.lokisloop-container .rightbox .profile input:focus {
+  outline: none;
+}
+
+.lokis-gamehost-profileform-container
+  .lokisloop-profile-form
+  .lokis-form-item
+  .form_control {
+  width: 25%;
+  display: inline-block;
+}
+.lokis-gamehost-profileform-container
+  .lokisloop-profile-form
+  .lokis-radio
+  .form_control {
+  width: 100%;
+}
+.lokis-gamehost-profileform-container
+  .lokisloop-profile-form
+  .lokis-radio
+  input[type="radio"] {
+  padding: 2px;
+  margin: 10px;
+  border-top: 0;
+  border-left: 0;
+  width: 20px;
+  box-shadow: none;
+  border: none;
+  height: 20px;
+  border-right: 0;
+  float: left;
+}
+.lokis-gamehost-profileform-container
+  .lokisloop-profile-form
+  .lokis-radio
+  input[type="radio"]:focus,
+.lokisloop-profile-form button.edit-button:focus {
+  outline: none;
+}
+.lokis-gamehost-profileform-container
+  .lokisloop-profile-form
+  .lokisloop-selective-box
+  .form_control {
+  width: calc(100% - 40px);
+}
+.lokisloop-selective-box {
+  display: block;
+  clear: both;
+}
+.lokis-form-item.lokis-radio {
+  clear: both;
+  display: inline-block;
+}
+.lokisloop-profile-form button.edit-button {
+  background-color: #eee;
+  color: #5a5a5a;
+  padding: 5px 20px;
+  border-radius: 8px;
+  border-color: #5a5a5a;
+}
+
 /* End of profile */
 
 /* Ended CSS for User Dashboard  */
