Info page and sample page
from h3 to h5 and Updated the CSS.

--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -454,7 +454,8 @@ li.lokis-active {
   text-align: center;
 }
 
-.lokisloop-dashboard-container .lokisloop-hosted-game h5,
+.lokisloop-dashboard-container h5,
+.lokisloop-hosted-game h5,
 .lokisloop-main-top h5 {
   text-align: center;
   margin: 20px 0;
