--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -156,6 +156,9 @@ span.page-numbers.current:hover {
 }
 
 /* for lokis post form */
+.lokis-post-form {
+  display: flex;
+}
 
 .lokisloop-container .lokis-post-form {
   margin: auto;
@@ -1494,11 +1497,41 @@ input#lokis-rememberme {
 /* CSS styles for cookie consent popup */
 .lokis-cookie-consent {
   position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 30%;
-  background-color: #f2f2f2;
-  padding: 10px;
-  text-align: center;
-  margin-bottom: 10px;
+  bottom: 50px;
+  right: 20px;
+  max-width: 345px;
+  width: 100%;
+  background: #fff;
+  border-radius: 8px;
+  padding: 15px 25px 22px;
+  transition: right 0.3s ease;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.lokis-cookie-heading .fa-cookie-bite::before {
+  margin-right: 20px;
+  font-size: 32px;
+  font-style: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-rendering: auto;
+  display: inline-block;
+  text-transform: none;
+}
+.lokis-cookie-buttons button#loki-cookie-accept {
+  border: none;
+  color: #fff;
+  padding: 8px 0;
+  border-radius: 4px;
+  background: #4070f4;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.lokis-cookie-buttons button#loki-cookie-reject {
+  border: 2px solid #4070f4;
+  background-color: #fff;
+  color: #4070f4;
+}
+.lokis-cookie-buttons button#loki-cookie-reject:hover {
+  background-color: #4070f4;
+  color: #fff;
 }
